# src/app/api/models.ts
@@ -1,2 +1,4 @@
 /* tslint:disable */
 /* eslint-disable */
+export { LoginDto } from './models/login-dto';
+export { UserDto } from './models/user-dto';
