# src/app/api/models/user-dto.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface UserDto {
+  dateOfBirthText?: null | string;
+  email?: null | string;
+  password?: null | string;
+  trainingLevel?: number;
+  userId?: number;
+  userLastname?: null | string;
+  userName?: null | string;
+}
